# siwg-vc2019

./: .gitignore  CMakeLists.txt  Example_swig.py  Project1.sdf  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  README.md  _Example_swig.pyd  example.cpp  example.h  example.i  example_wrap.cxx  sh.bat  test.py
